<resources>
    <string name="app_name">AppVenta</string>
    <string name="name">name</string>
    <string name="apellido">apellidos</string>
    <string name="dni">enter dni...</string>
    <string name="save">save</string>
    <string name="surname">surname</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="producto">producto</string>
    <string name="nombre">nom_producto</string>
    <string name="precio">precio</string>
    <string name="cantidad">cantidad</string>
    <string name="categoria">categoria</string>
    <string name="idproducto">idproducto</string>
    <string name="nombre_cat">nombre_cat</string>
    <string name="addCarrito">Articulo agregado al carrito</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="carrito">Articulos en el carrito</string>
    <string name="Acciones">Accion</string>nombre_accion
    <string name="nombre_accion">name of product</string>n

</resources>
