<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.editor.ClienteActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/idname"
            android:hint="@string/name"
            android:textSize="25sp"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_below="@id/idname"
            android:hint="@string/surname"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />
        <EditText
            android:id="@+id/dni"
            android:layout_below="@id/apellidos"
            android:hint="@string/dni"
            android:inputType="textCapSentences"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill" />

        <!--<com.thebluealliance.spectrum.SpectrumPalette
            android:id="@+id/pallete"
            android:layout_below="@id/dni"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:spectrum_colors="@array/demo_colors"/>-->
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>