<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_above="@+id/producto_precio2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="3dp"
                android:src="@mipmap/ic_sale1_foreground" />

            <TextView
                android:id="@+id/produto_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="26dp"
                android:fontFamily="@font/raleway_light"
                android:gravity="left"
                android:text="@string/producto"
                android:textColor="@color/colorSecundaryText"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/producto_precio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/produto_nombre"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="51dp"
                android:layout_marginRight="51dp"
                android:layout_marginBottom="-5dp"
                android:fontFamily="@font/krona_one"
                android:gravity="left"
                android:text="@string/precio"
                android:textColor="#2F3231"
                android:textSize="18dp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cantidad_venta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:text="@string/cantidad"
        android:visibility="gone"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/idcategoria_venta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:text="@string/categoria"
        android:visibility="gone"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/idproducto_venta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:text="@string/idproducto"
        android:textColor="#DA8C13"
        android:textSize="30dp"
        android:visibility="gone"
        android:textStyle="bold" />

</LinearLayout>


