<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="1dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/product_item">

    <!--<LinearLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#487178"/>-->
    <RelativeLayout
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7f9fc">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgshop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:src="@drawable/agregarcarrito"
                app:riv_corner_radius="10dp"/>

        <TextView
            android:id="@+id/vacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/producto_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vacio"
            android:gravity="center"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/cantidad_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/producto_shop"
                android:layout_alignParentRight="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="189dp"
                android:layout_toEndOf="@+id/imgshop"
                android:layout_toRightOf="@+id/imgshop"
                android:text="@string/cantidad"
                />

            <TextView
                android:id="@+id/precio_shop"
                android:text="@string/precio"
                android:textAlignment="inherit"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@id/producto_shop"
                android:layout_marginTop="5dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>